# something-that-runs-on-a-schedule

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md
.github/workflows/: build.yml
MyWidgetService/: Makefile  app.py  pyproject.toml
MyWidgetService/lambda/: hello.py  message.py
MyWidgetService/my_lambda_cron_service/: __init__.py  lambda_cron_service.py  my_lambda_cron_stack.py
MyWidgetService/my_widget_service/: my_widget_service_stack.py  widget_service.py
MyWidgetService/resources/: widgets.js
MyWidgetService/tests/: __init__.py
MyWidgetService/tests/unit/: __init__.py  test_my_widget_service_stack.py
